* Password security has been updated to stronger hashing standards. As a result, PHP 5.5.0 or higher is now required.
* Social media submissions are now being linked directly to their submission URLs instead of being processed by Sandbox first.
* Added user email validation support.
* User listing in the ACP will now paginate to avoid long queries.

Bugs:

* Active user agent list didn't have sufficient space for an IPv6 address to display clearly.
* Bare URLs entered into posts were getting stray single quotes placed around them.
* Crash if all permissions are unset on a user edit.
* BBCode menu was not functional on the random quotes editor.
* Fixed an issue with the emoticon editor in the ACP.
* Submitting a false positive on a comment was calling an invalid function name.
* User count stats were referencing the wrong variable and giving inaccurate counts.

Changes for Sandbox 2.3
-----------------------

Changes:

* Added site_tagline setting to go with a site's name in the header.
* Made the iTouch icons used on Empire of the Iguanadons into a standard feature.
* Analytics tracker code updated.

Bugs:

* Social media button links for gallery images needed to be updated.
* Clean up the upgrade installer to handle upgrades for sites running Sandbox 1.8.
* Numerous bug fixes for new installs, upgrades, and minor security issues with hidden image and download folders.

Changes for Sandbox 2.2
-----------------------

Changes:

* Added Google +1 button support to blog posts.
* Added Twitter button support to blog posts.
* Added Reddit button support for blog posts.
* Changed the Facebook button setup.
* Removed the Technorati button as they're now a vile web spam service provider.
* Added global and per-post toggles for restriction of anonymous posting.
* Emoticons are now handled independently of skins and can be added on the fly as desired.
* Added the ability to disable all comments for all users, registered or otherwise.